samples/_failures_safe/1761631597_601e2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa3f8d49.c: In function ‘main’:
./samples/SAFE/__tmp_fa3f8d49.c:150:47: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  150 |                 if (multiply_matrices(&mat1, &mat
      |                                               ^~~
      |                                               mat2
./samples/SAFE/__tmp_fa3f8d49.c:150:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fa3f8d49.c:150:50: error: expected ‘)’ at end of input
  150 |                 if (multiply_matrices(&mat1, &mat
      |                                      ~           ^
      |                                                  )
./samples/SAFE/__tmp_fa3f8d49.c:150:21: error: too few arguments to function ‘multiply_matrices’
  150 |                 if (multiply_matrices(&mat1, &mat
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fa3f8d49.c:60:5: note: declared here
   60 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fa3f8d49.c:150:17: error: expected declaration or statement at end of input
  150 |                 if (multiply_matrices(&mat1, &mat
      |                 ^~
./samples/SAFE/__tmp_fa3f8d49.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa3f8d49.c:150:17: error: expected declaration or statement at end of input
